# BallCL

./: .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt  ball.cc  ball.h  main.cc  shader.cc  shader.h
src/shaders/: frag.glsl  vert.glsl
